<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="get_started">GET STARTED</string>
    <string name="error_et_title">Заполните обязательное поле</string>
    <string name="age">Age</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="coder">Enter code</string>
    <string name="send_code">Send code</string>
    <string name="continue_">Continue</string>
</resources>